--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "#LINE Messaging API test PHP",
     "description": "heroku 上にデプロイされる LINE Messaging APIのサーバースクリプト",
     "repository": "https://github.com/skoiwa/MatchingApp1120.git",
-    "logo": "",
+    "logo": "http://www.aaa.bbb.com/image.jpg",
     "keywords": ["php", "line-messaging-api"],
     "env": {
       "LINE_CHANNEL_ACCESS_TOKEN": {
